# banjo-moveset

./: .gitignore  Cargo.toml  README.md  build.ps1  info.toml  pushdev.bat  stageparam_training.stprmxml
.devcontainer/: Dockerfile
hdrLibraries/dynamic/: Cargo.toml
hdrLibraries/dynamic/src/: ext.rs
romf/: config.json
romf/buddy.param/: vl.prcxml
romf/common.param/: fighter_param.prc  fighter_param.prcxml
romf/item.buddybomb/script/animcmd/body/: game.lc  game.lua
src/: lib.rs
src/buddy/: backair.rs  downair.rs  downspecial.rs  fthrow.rs  mod.rs  movement.rs  nair - Copy.rs  nair.rs  nspecial.rs  opff.rs  sidespecial.rs  status.rs  upair.rs  upsmash.rs  upspecial.rs  upthrow.rs  uptilt.rs
src/buddy_pad/: fall.rs  mod.rs
